[metadata]
name = process_nwb
version = 0.1.4
author = Jesse Livezey
author_email = jesse.livezey@gmail.com
description = ECoG preprocessing functions for NWB files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BouchardLab/process_nwb
project_urls =
    Bug Tracker = https://github.com/BouchardLab/process_nwb/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    scripts/preprocess_folder

[options.packages.find]
where = src
